# pymsym-win

./: LICENSE  README.MD  README.md  pyproject.toml
lib/: CMakeLists.txt
lib/src/: basis_function.c  basis_function.h  character_table.c  character_table.h  context.c  context.h  debug.c  debug.h  elements.c  elements.h  equivalence_set.c  equivalence_set.h  geometry.c  geometry.h  linalg.c  linalg.h  msym.c  msym.h  msym_error.c  msym_error.h  permutation.c  permutation.h  point_group.c  point_group.h  rsh.c  rsh.h  subspace.c  subspace.h  symmetrize.c  symmetrize.h  symmetry.c  symmetry.h  symop.c  symop.h
pymsym/: __init__.py  high_level.py  pymsym.py
