[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymsym"
version = "0.3.4"
description = "Molecular point group symmetry lib (Pre-built DLL version)"
authors = [
    { name = "Corin Wagen" },
    { name = "Tatsuhiko Yoshino" }
]

dependencies = [
    "numpy"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["pymsym"]

[tool.setuptools.package-data]
"pymsym" = ["*.dll"]
